--- a/src/index.html
+++ b/src/index.html
@@ -335,18 +335,18 @@
     <nav class="navbar">
         <div class="logo">OpinaFlix</div>
         <ul>
-            <li><a href="#">Filmes e Séries</a></li>
-            <li><a href="#">Coleções</a></li>
-            <li><a href="#">Conteúdo Novo</a></li>
-            <li><a href="#">Review da Galera</a></li>
+            <li><a href="index.html">Filmes e Séries</a></li>
+            <li><a href="colecoes.html">Coleções</a></li>
+            <li><a href="conteudo-novo.html">Conteúdo Novo</a></li>
+            <li><a href="review-galera.html">Review da Galera</a></li>
         </ul>
         <form id="search-form" style="display:inline;">
             <input type="text" id="search-input" placeholder="Pesquisar filmes, séries...">
             <button type="submit" id="search-button">🔍</button>
         </form>
-        <button id="btn-login" style="margin-left:16px; padding:8px 16px; background:#e50914; color:#fff; border:none; border-radius:4px; cursor:pointer;">
-    Entrar na sua conta
-  </button>
+        <button id="btn-login" onclick="window.location.href='login.html'" style="margin-left: 16px; background: #e50914; color: #fff; border: none; border-radius: 4px; padding: 8px 16px; cursor: pointer;">
+  Entrar na sua conta
+</button>
     </nav>
     
     <section class="hero">
@@ -588,6 +588,8 @@ document.getElementById('form-login').addEventListener('submit', async function(
   if (resposta.ok) {
     mensagemDiv.textContent = resultado.message;
     mensagemDiv.style.color = 'green';
+    // Salve o usuário logado no localStorage, se quiser
+    localStorage.setItem('usuario', JSON.stringify(resultado.usuario));
     setTimeout(() => {
       document.getElementById('login-modal').style.display = 'none';
       mensagemDiv.textContent = '';
