--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -13,6 +13,46 @@
             flex-direction: column;
             min-height: 100vh;
         }
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+            background: #fff;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+        }
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #e50914;
+            text-decoration: none;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+        }
+        li {
+            margin-right: 2rem;
+        }
+        a {
+            text-decoration: none;
+            color: #333;
+            font-weight: 500;
+        }
+        a:hover {
+            color: #e50914;
+        }
+        #btn-login {
+            margin-left: 16px;
+            background: #e50914;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            padding: 8px 16px;
+            cursor: pointer;
+        }
         .container {
             max-width: 400px;
             margin: 4rem auto;
@@ -58,46 +98,6 @@
             text-align: center;
             margin-bottom: 1rem;
         }
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            background: #fff;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-        }
-        .logo {
-            font-size: 1.5rem;
-            font-weight: bold;
-            color: #e50914;
-            text-decoration: none;
-        }
-        ul {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-        }
-        li {
-            margin-right: 2rem;
-        }
-        a {
-            text-decoration: none;
-            color: #333;
-            font-weight: 500;
-        }
-        a:hover {
-            color: #e50914;
-        }
-        #btn-login {
-            margin-left: 16px;
-            background: #e50914;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            padding: 8px 16px;
-            cursor: pointer;
-        }
     </style>
 </head>
 <body>
@@ -112,40 +112,37 @@
             Entrar na sua conta
         </button>
     </nav>
-    <div class="container">
-        <h2>Cadastro de Usuário</h2>
+    <div style="max-width:400px;margin:40px auto;background:#222;padding:32px;border-radius:8px;">
+        <h2 style="color:#e50914;">Cadastro</h2>
         <form id="form-cadastro">
-            <input type="text" id="nome" placeholder="Nome" required />
-            <input type="email" id="email" placeholder="E-mail" required />
-            <input type="password" id="senha" placeholder="Senha" required />
-            <button type="submit">Cadastrar</button>
+            <input type="text" id="nome" placeholder="Nome" required style="width:100%;margin-bottom:8px;">
+            <input type="email" id="email" placeholder="E-mail" required style="width:100%;margin-bottom:8px;">
+            <input type="password" id="senha" placeholder="Senha" required style="width:100%;margin-bottom:16px;">
+            <button type="submit" style="width:100%;background:#e50914;color:#fff;border:none;padding:10px;border-radius:4px;">Cadastrar</button>
         </form>
-        <div id="mensagem"></div>
+        <div id="mensagem-cadastro" style="margin-top:12px;color:#e50914;"></div>
     </div>
     <script>
-document.getElementById('form-cadastro').addEventListener('submit', async function(event) {
-  event.preventDefault();
-  const nome = document.getElementById('nome').value;
-  const email = document.getElementById('email').value;
-  const senha = document.getElementById('senha').value;
-
-  const resposta = await fetch('http://localhost:3001/api/usuarios', {
-    method: 'POST',
-    headers: { 'Content-Type': 'application/json' },
-    body: JSON.stringify({ nome, email, senha })
-  });
-
-  const resultado = await resposta.json();
-  const mensagemDiv = document.getElementById('mensagem');
-
-  if (resposta.ok) {
-    mensagemDiv.textContent = resultado.message;
-    mensagemDiv.style.color = 'green';
-  } else {
-    mensagemDiv.textContent = resultado.message;
-    mensagemDiv.style.color = 'red';
-  }
-});
-</script>
+    document.getElementById('form-cadastro').addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const nome = document.getElementById('nome').value;
+        const email = document.getElementById('email').value;
+        const senha = document.getElementById('senha').value;
+        const resp = await fetch('http://localhost:3001/api/usuarios', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ nome, email, senha })
+        });
+        const data = await resp.json();
+        if (resp.ok) {
+            document.getElementById('mensagem-cadastro').style.color = 'lightgreen';
+            document.getElementById('mensagem-cadastro').textContent = 'Cadastro realizado com sucesso!';
+            // Redirecionar para login ou logar automaticamente, se quiser
+        } else {
+            document.getElementById('mensagem-cadastro').style.color = '#e50914';
+            document.getElementById('mensagem-cadastro').textContent = data.message || 'Erro ao cadastrar.';
+        }
+    });
+    </script>
 </body>
 </html>
